MODIFY: 调整字体，添加首页热门评论

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/normalize.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Vollkorn">
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
