--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,6 +5,13 @@ $text-color: #46433A;
 $anchor-text-color: #CE534D;
 $background-color: #EEEEEE;
 
+@font-face {
+  font-family: 'Vollkorn';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Vollkorn Regular'), local('Vollkorn-Regular'), url(http://fonts.gstatic.com/s/vollkorn/v6/idGKtgpe38okB6bfeHMsLHYhjbSpvc47ee6xR_80Hnw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/vollkorn/v6/BCFBp4rt5gxxFrX6F12DKnYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
+}
+
 body {
   font-family: 'Vollkorn', Georgia, serif;
   font-size: 1.1em;
