--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/normalize.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/code.css">
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
