--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,14 +11,29 @@
         {% endif %}
 
         <div class="tagline-container"><p>{{ page.date | date_to_string }}</p></div>
-
-        {% include comments.html %}
+        <div style="clear:both"></div>
     </header>
+
     <main>
         <div class="content">
             {{ content }}
         </div>
+        <div class="navigation">
+            {% if page.previous.url %}
+            <span>上一篇《<a href="{{ page.previous.url }}">{{ page.previous.title }}</a>》</span>
+            {% endif %}
+
+            {% if page.next.url %}
+            <span>下一篇《<a href="{{ page.next.url }}">{{ page.next.title }}</a>》</span>
+            {% endif %}
+
+            <span class="return-index"><a href="{{ site.url }}">返回首页</a></span>
+        </div>
     </main>
+    <comment>
+        {% include comments.html %}
+    </comment>
+    <div style="clear:both"></div>
 </div>
 </body>
 </html>
