--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,8 +19,7 @@ body {
   background-color: $background-color;
 }
 
-header,
-main {
+header, main, comment {
   padding: 0 20px;
 }
 
@@ -84,7 +83,7 @@ since it must be aligned with the content */
 
 /*** author ***/
 .author-container h1 {
-  font-size: 2.2em;
+  font-size: 2.1em;
   margin-top: 0;
   margin-bottom: 0;
   text-align: center;
@@ -95,6 +94,32 @@ since it must be aligned with the content */
   font-size: 1.3em;
   text-align: center;
   margin-bottom: 2em;
+}
+
+.content {
+  line-height: 150%;
+}
+
+.content p {
+  text-indent: 1.5em;
+  margin-top: 0;
+}
+
+.navigation {
+  background-color: #EFECE0;
+  font-size: 0.8em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px 0;
+  margin: 20px 0;
+}
+
+.navigation span {
+  padding: 0 10px;
+}
+
+.navigation .return-index {
+  float: right;
 }
 
 /******/
@@ -130,6 +155,10 @@ footer {
     width: 480px;
     margin: 10% auto 0 auto;
   }
+
+  .content img {
+    width: 390px;
+  }
 }
 
 /* All other devices (1024px and up) */
@@ -140,11 +169,21 @@ footer {
     width: 1024px;
   }
 
+  .content img {
+    width: 580px;
+  }
+
   /* the header column stays left and has a dynamic width with all contents
   aligned right */
   header {
     float: left;
-    width: 30%;
+    width: 309px;
+    text-align: right;
+  }
+
+  comment {
+    float: left;
+    width: 309px;
     text-align: right;
   }
 
@@ -155,8 +194,9 @@ footer {
   }
 
   main {
+    float: right;
     width: 62%;
-    margin-left: 38%;
+    height: 600px;
     padding: 0;
   }
 }
