--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/code.css">
 
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/jquery-1.11.2.min.js"></script>
+
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
     <meta name="author" content="{{ site.compass.author }}">
