--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -46,5 +46,6 @@
     </comment>
     <div style="clear:both"></div>
 </div>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/article.js"></script>
 </body>
 </html>
