MODIFY: 上传ssl文章图片

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -5,14 +5,15 @@
     }
 
     .ds-share-icons-more {
-        right: 0px;
+        top: 18px !important;
+        left: inherit !important;
+        right: 0;
     }
 </style>
-<div class="ds-share" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-content=""
+<div class="ds-share" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-content="{{ page.excerpt }}"
      data-url="{{ site.url }}{{ page.url }}">
     <div class="ds-share-inline" data-toggle="ds-share-icons-more">
         <a class="ds-more" href="javascript:void(0);">分享</a>
-        <div class="ds-share-icons-more">
-        </div>
+        <div class="ds-share-icons-more"></div>
     </div>
 </div>
