MODIFY: 上传ssl文章图片

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,7 +13,7 @@ $background-color: #EEEEEE;
 }
 
 body {
-  font-family: 'Vollkorn', Georgia, serif;
+  font-family: 'Vollkorn', Georgia, sans-serif;
   font-size: 1em;
   color: $text-color;
   background-color: $background-color;
