--- a/assets/main.scss
+++ b/assets/main.scss
@@ -111,7 +111,7 @@ since it must be aligned with the content */
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px 0;
-  margin: 20px 0 400px 0;
+  margin: 20px 0 20px 0;
   position: relative;
 }
 
@@ -201,5 +201,6 @@ footer {
     float: right;
     width: 62%;
     padding: 0;
+    margin-bottom: 400px;
   }
 }
